sprestel: added figures for double-soft/triple-coll. study

--- a/proceedings/jet_sub.tex
+++ b/proceedings/jet_sub.tex
@@ -6,6 +6,8 @@
 \usepackage{amsmath}
 \usepackage[colorlinks=True,citecolor=blue]{hyperref}
 
+\usepackage{subfigure}
+
 \newcommand{\GeV}{\,\mathrm{GeV}}
 \newcommand{\TeV}{\,\mathrm{TeV}}
 \newcommand{\ie}{i.e.\ }
@@ -115,8 +117,39 @@ Explain triple collinear functions.  Reference Fig.~\ref{fig:jets:np:triplecolli
 Dire~\cite{Hoche:2015sya}.  PFN~\cite{Komiske:2018cqr}.
 
 \begin{figure}[h!]
-\centering
-\includegraphics[width=0.45\textwidth]{figs/stefanfinger.pdf}
+\subfigure[blub]{
+\includegraphics[width=0.23\textwidth]{figs/nlo_real_vpcg.pdf}
+\label{fig:jets:np:triplecollineardiagrams2}
+}
+\subfigure[blub]{
+\includegraphics[width=0.23\textwidth]{figs/nlo_real_vpcq.pdf}
+\label{fig:jets:np:triplecollineardiagrams2}
+}
+\subfigure[blub]{
+\includegraphics[width=0.23\textwidth]{figs/nlo_real_vpsg.pdf}
+\label{fig:jets:np:triplecollineardiagrams2}
+}
+\subfigure[blub]{
+\includegraphics[width=0.23\textwidth]{figs/nlo_real_vpsq.pdf}
+\label{fig:jets:np:triplecollineardiagrams2}
+}
+\\
+\subfigure[blub]{
+\includegraphics[width=0.23\textwidth]{figs/nlo_real_box1.pdf}
+\label{fig:jets:np:triplecollineardiagrams1}
+}
+\subfigure[blub]{
+\includegraphics[width=0.23\textwidth]{figs/nlo_real_box2.pdf}
+\label{fig:jets:np:triplecollineardiagrams2}
+}
+\subfigure[blub]{
+\includegraphics[width=0.23\textwidth]{figs/nlo_real_tgc1.pdf}
+\label{fig:jets:np:triplecollineardiagrams2}
+}
+\subfigure[blub]{
+\includegraphics[width=0.23\textwidth]{figs/nlo_real_tgc2.pdf}
+\label{fig:jets:np:triplecollineardiagrams2}
+}
 \caption{Replace me with proper diagrams!}
 \label{fig:jets:np:triplecollineardiagrams}
 \end{figure}
@@ -127,6 +160,22 @@ Dire~\cite{Hoche:2015sya}.  PFN~\cite{Komiske:2018cqr}.
 \caption{Replace me with proper plots!}
 \label{fig:jets:np:triplecollinearNN}
 \end{figure}
+
+
+
+
+%figs/nlo_real_box1.pdf
+%figs/nlo_real_box2.pdf
+%figs/nlo_real_tgc1.pdf
+%figs/nlo_real_tgc2.pdf
+%figs/nlo_real_vpcg.pdf
+%figs/nlo_real_vpcq.pdf
+%figs/nlo_real_vpsg.pdf
+%figs/nlo_real_vpsq.pdf
+%figs/nlo_soft_vpcg.pdf
+
+
+
 
 
 \subsubsection{$g\to b \bar b$}
