prestel: added more bullet points to triple-coll. study

--- a/proceedings/lh2019.bib
+++ b/proceedings/lh2019.bib
@@ -53,8 +53,38 @@
       SLACcitation   = "%%CITATION = ARXIV:1802.00008;%%"
 }
 
+@article{Hoche:2017iem,
+      author         = "H{\"o}che, Stefan and Prestel, Stefan",
+      title          = "{Triple collinear emissions in parton showers}",
+      journal        = "Phys. Rev.",
+      volume         = "D96",
+      year           = "2017",
+      number         = "7",
+      pages          = "074017",
+      doi            = "10.1103/PhysRevD.96.074017",
+      eprint         = "1705.00742",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "SLAC-PUB-16963, FERMILAB-PUB-17-122-T, MCNET-17-05",
+      SLACcitation   = "%%CITATION = ARXIV:1705.00742;%%"
+}
 
-
+@article{Dulat:2018vuy,
+      author         = "Dulat, Falko and H{\"o}che, Stefan and Prestel, Stefan",
+      title          = "{Leading-Color Fully Differential Two-Loop Soft
+                        Corrections to QCD Dipole Showers}",
+      journal        = "Phys. Rev.",
+      volume         = "D98",
+      year           = "2018",
+      number         = "7",
+      pages          = "074013",
+      doi            = "10.1103/PhysRevD.98.074013",
+      eprint         = "1805.03757",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "SLAC-PUB-17252, FERMILAB-PUB-18-147-T, MCNET-18-09",
+      SLACcitation   = "%%CITATION = ARXIV:1805.03757;%%"
+}
 
 @article{Czakon:2015owf,
       author         = "Czakon, Michal and Heymes, David and Mitov, Alexander",
