drafter half a page of conclusions

--- a/proceedings/jet_sub.tex
+++ b/proceedings/jet_sub.tex
@@ -120,7 +120,7 @@ Rivet~\cite{Buckley:2010ar}, Professor~\cite{Buckley:2009bj}, HepData~\cite{Buck
 \subsection{\textsc{Squirrel} for the Gluon PDF}
 \label{sec:jets:pdf}
 
-\input{gluon_pdf.tex}
+\input{gluon_pdf.tex}dis
 
 \subsection{The highest energy gluons at the LHC}
 \label{sec:jets:highest}
@@ -128,7 +128,24 @@ Rivet~\cite{Buckley:2010ar}, Professor~\cite{Buckley:2009bj}, HepData~\cite{Buck
 
 \subsection{Conclusion and Outlook}
 \label{sec:jets:conclusion}
-(Simone)
+The jet subgroup at Les Houches 2019 concentrated their effort on the study of gluonic jets across four decades of energy, which are explored by the LHC. 
+%
+In the low-energy regime jets are sensitive to the non-perturbative dynamics of QCD and their description is beyond the jurisdiction of the standard first-principle approach based on perturbative field theory. Therefore, phenomenological models are usually employed to describe the non-perturbative parton-to-hadron transition. 
+%
+In our study, we have first addressed some of qualitative features of the groomed jet mass distribution in the non-perturbative regime and then turned our attention to the possibility of employing jet substructure variables to test and, eventually, improve on, the modelling of non-perturbative corrections in Monte Carlo event generators. 
+
+As we go up in energy, we enter the regime where we expect parton-shower algorithms to correctly capture the relevant physics. In this context, we have investigated the impact of higher-order corrections to the splitting kernels that are at the core of any parton-branching algorithm. In particular, we have exploited modern machine-learning techniques in order to design observables that are sensitive to triple-collinear corrections. 
+%
+At high energy, the issue of determining whether a given jet can be labelled as quark-initiated or gluon-initiated becomes central in Higgs physics and in the context of searches for particles and interactions beyond the Standard Model. Therefore, we have studied the performance of quark/gluon tagging in vector-boson-fusion and vector-boson-scattering analyses. Inspired by quark/gluon tagging in searches, we have explored the possibility of measuring gluon-jet transverse momentum distributions as a probe of parton distribution functions at high, i.e.\ 1~TeV, scale.
+%
+Finally, we have discussed how to probe the most energetic gluons at the LHC.
+
+
+This report testifies that the jet subgroup have enjoyed a fruitful workshop, characterised by lively discussions and cross-pollination of ideas not only between theory and experimental communities but also between different methodologies, such as first-principle calculations in field theory, Monte Carlo simulations and machine-learning techniques. 
+%
+We are confident that these results, in some cases still preliminary, are already seeding new ideas and research projects which we look forward to further developing at the next edition of this workshop. 	
+
+
 
 \subsection*{Acknowledgments}
 
@@ -136,7 +153,7 @@ We thank the participants of Les Houches 2019 for a lively environment and usefu
 %%
 BN is supported in part by the Office of High Energy Physics of the U.S. Department of Energy under Contract No. DE-AC02-05CH11231.
 %
-SM is also supported by the curiosity-driven grant "Using jets to challenge the Standard Model of particle physics" from Universit\`a di Genova.
+SM is also supported by the curiosity-driven grant ``Using jets to challenge the Standard Model of particle physics" from Universit\`a di Genova.
 
 \bibliography{lh2019}
 
